# dict-tools

./: LICENSE  README.md  setup.cfg  setup.py  test_dict_tools.py  tox.ini
dict_tools/: __init__.py
