[metadata]
name = dict-tools
version = 0.3.0
description = Utilities for dealing with dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dictionaries
url = https://github.com/firba1/dict-tools
author = Ben Bariteau
author_email = ben.bariteau@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = dict_tools
